readme and final adjusts
